@@ -1,7 +1,17 @@
+@font-face {
+    font-family: CustomSegoeUI;
+    src:
+        local("Segoe UI Light"),
+        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.woff2) format("woff2"),
+        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.woff) format("woff"),
+        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.ttf) format("truetype");
+    font-weight: 100;
+}
+
 html, body, button {
 	margin: 0px;
 	padding: 0px;
-	font-family: Segoe UI;
+	font-family: CustomSegoeUI;
 	overflow: hidden;
 }
 
